stuf/src/p6/tests/t026.err
Semantic error on line 25: No body was provided for animation block 'yawn' which was declared in a forward statement.
